# Concurrency

./: .clang-format  .gitignore  CMakeLists.txt  README.md
q1/: Makefile  README.md  entities.c  entities.h  functions.c  functions.h  globals.c  globals.h  main.c  temp.txt
q2/: Makefile  README.md  client  client.cpp  entities.c  entities.h  functions.c  functions.h  globals.c  globals.h  main.c  server  server_prog.cpp  structure.txt
q3/: README.md  client.cpp  server_prog.cpp
